<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainPageConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wooden_background"
    tools:context=".GameActivity">

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:onClick="autoMove"
        android:padding="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/comp_icon" />

    <ImageButton
        android:id="@+id/helpImageButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:onClick="help"
        android:padding="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toEndOf="@+id/imageButton2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/help_button" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:onClick="saveGame"
        android:padding="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toEndOf="@+id/helpImageButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/save_button" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:padding="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toEndOf="@+id/imageButton4"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/quit_button" />

    <TextView
        android:id="@+id/humanTournamentScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/human_tournament_score_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/computerTournamentScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/computer_tournament_score_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/humanTournamentScore" />

    <TextView
        android:id="@+id/engineTopTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/engine_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/computerTournamentScore" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:onClick="showPopup"
        android:padding="0dp"
        android:scaleType="centerCrop"
        app:backgroundTint="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/floating_action_button" />

    <TextView
        android:id="@+id/textViewHandText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/yourHand"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
        app:layout_constraintStart_toStartOf="parent" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linearLayoutHand"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"></LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/buttonHumanSide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="8dp"
        android:onClick="setInputSide"
        android:text="@string/humanSideString"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutEntireTable1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonComputerSide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="4dp"
        android:onClick="setInputSide"
        android:text="@string/textComputerSide"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutEntireTable1"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/textEngine"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutEntireTable1"
        app:layout_constraintEnd_toStartOf="@+id/buttonComputerSide"
        app:layout_constraintStart_toEndOf="@+id/buttonHumanSide" />

    <LinearLayout
        android:id="@+id/linearLayoutEntireTable1"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textViewHandText"
        tools:layout_editor_absoluteX="2dp">


        <HorizontalScrollView
            android:id="@+id/scrollViewHumanSide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".45"
            android:background="@drawable/wooden_background_dark"
            android:clickable="false"
            android:onClick="setInputSide">

            <LinearLayout
                android:id="@+id/linearLayoutHumanSide"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:orientation="horizontal" />
        </HorizontalScrollView>

        <LinearLayout
            android:id="@+id/linearLayoutEngine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_weight=".10"
            android:orientation="horizontal" />

        <HorizontalScrollView
            android:id="@+id/scrollViewComputerSide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".45"
            android:background="@drawable/wooden_computer_background"
            android:clickable="false">

            <LinearLayout
                android:id="@+id/linearLayoutComputerSide"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:orientation="horizontal" />
        </HorizontalScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/turnInfoLinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/buttonHumanSide"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/turnInfoTurn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/turn_info_turn"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/turnInfoHumanOpenStone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/turn_info_human_open"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/turnInfoComputerOpenStone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/turn_info_computer_open_stone"
            android:textStyle="bold" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>